# md-rom-emulator

./: CHANGELOG.md  README.md  build.sh
.github/workflows/: build.yml  release.yml
desc/: app.json
rp/: build.sh
rp/src/: CMakeLists.txt  aconfig.c  blink.c  display.c  download.c  emul.c  hw_config.c  lwipopts.h  main.c  mbedtls_config.h  network.c  romemul.c  romemul.pio  sdcard.c  term.c
rp/src/httpc/: CMakeLists.txt  httpc.c
rp/src/include/: aconfig.h  blink.h  display.h  download.h  emul.h  memfunc.h  network.h  romemul.h  target_firmware.h  tprotocol.h
rp/src/settings/: settings.c
